tests/ui/dis/ptr_copy.normal.stderr
error: Cannot memcpy dynamically sized data
    --> $CORE_SRC/intrinsics.rs:2132:14
     |
2132 |     unsafe { copy(src, dst, count) }
     |              ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

